@@ -133,6 +133,13 @@ interface LAMTool {
 	 */
 	function isVisible();
 	
+	/**
+	 * Returns if a tool may be hidden by configuration in the LAM server profile.
+	 * 
+	 * @return boolean hideable
+	 */
+	function isHideable();
+	
 }
 
 /**
