@@ -117,6 +117,15 @@ class toolOUEditor implements LAMTool {
 		return (sizeof($_SESSION['config']->get_ActiveTypes()) > 0);
 	}
 	
+	/**
+	 * Returns if a tool may be hidden by configuration in the LAM server profile.
+	 * 
+	 * @return boolean hideable
+	 */
+	function isHideable() {
+		return true;
+	}
+	
 }
 
 ?>
